<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:layout_margin="4dp"
        android:padding="4dp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/et_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/et_name"
        android:padding="16dp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_lastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/et_last_name"
        android:padding="16dp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_password1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/et_password1"
        android:padding="16dp"
        android:layout_margin="16dp"/>

    <EditText
        android:id="@+id/et_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/et_password2"
        android:padding="16dp"
        android:layout_margin="16dp"/>

        <Button
            android:id="@+id/btn_confirm_registration"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clickConfirm"
            android:padding="16dp"
            android:text="@string/confirm"
            android:textColor="@color/colorOnPrimary" />
    </LinearLayout>

</ScrollView>

