<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:textColor="@color/colorPrimary"/>

    <EditText
        android:id="@+id/et_enter_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="phone"
        android:hint="@string/et_enter_phone"
        android:padding="16dp"
        android:layout_margin="16dp"/>

    <Button
        android:id="@+id/btn_confirm_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:padding="16dp"
        android:textColor="@color/colorPrimaryDark"
        style="?android:attr/borderlessButtonStyle"
        android:onClick="confirmEntryPhone"/>
</LinearLayout>